--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Jared Smith
-bio:                'Engineer, explorer, and always curiuos.'
+bio:                'Engineer, explorer, and always curious.'
 description:        "Site for projects,research, and blogs by Jared Smith."
 reading_time:       true
 words_per_minute:   200
