--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Jared Smith
 bio:                'Engineer, explorer, and always curious.'
-description:        "Site for projects,research, and blogs by Jared Smith."
+description:        "Site for projects,research, and blogs."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
