--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ sass:
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:
+email:              jred.smith@live.com
 #twitter:            username
 #facebook:           username
 github-url:         jredsmitty
